--- a/index.html
+++ b/index.html
@@ -3,17 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gustavo Francisco Leichter</title>
+    <title>Trabalho 3</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-    <!-- Conteúdo da Página -->
-    <h1>Minha Página HTML com JavaScript</h1>
+   
 
-    <p>Este é um parágrafo simples.</p>
+    <div id="Cabecalho">Gustavo Francisco Leichter</div>
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-danger">
 
-    <!-- Inclua seu código JavaScript aqui -->
+        <!-- Logo -->
+        <a href="" class="navbar-brand"></a>
+
+        <!-- Menu-->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- navegacao -->
+        <div class="collapse navbar-collapse" id="navegacao">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a href="#resume" class="nav-link">Resume</a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link">Contact</a>
+            </li>
+        </ul>
+        </div>
+    </nav>lua seu código JavaScript aqui -->
     <script>
         // Exemplo de código JavaScript simples
         document.addEventListener('DOMContentLoaded', function () {
