--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portifólio - Vinicius Nunes</title>
+    <title>Gustavo Frnacisco Leichter</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">viniciusnunes</div>
+      <div class="logo">GustavoLeichter</div>
       <a href="#">
         <i class="fas fa-bars navigation-icon"></i>
       </a>
@@ -63,8 +63,8 @@
           />
           <div>
             <span class="profile__text">Olá, meu nome é</span>
-            <h1 class="profile__name">Vinicius Nunes</h1>
-            <span class="profile__text">e sou desenvolvedor Frontend</span>
+            <h1 class="profile__name">Gustavo Leichter</h1>
+            <span class="profile__text">e estou estudando Tecnologia em Sistemas para Internet</span>
           </div>
         </div>
       </section>
@@ -73,11 +73,10 @@
         <div class="description">
           <h3 class="description__tittle">QUEM SOU?</h3>
           <p class="description__text">
-            Sou iniciante na área de criação e manutenção de sites, tenho
-            conhecimento em prototipação e designer sempre pensando na
-            experiência do usuário. Sou apaixonado pelo mundo digital e
-            principalmente desenvolvimento, sempre procurando inspiração nos
-            meus colegas de trabalho e no mundo que me rodeia.
+            Atualmente estudando Sistemas para internet na Universidade Federal do Paraná em modo presencial, estou à procura de trabalho na área de T.I se possível, e afins. Pretendo me mudar para a cidade de Toledo-PR. 
+Tenho experiência em atendimento ao cliente na área de telecomunicações. Trabalhei no atendimento ao cliente, tendo metas para cumprir todo mês, sendo recompensado financeiramente. 
+Busco me aperfeiçoar em várias linguagens como: JAVA, JAVAscript, C#, C++, SQL, HTML, além de experiências de trabalho em outras áreas diversas.
+
           </p>
         </div>
         <div class="skills">
