--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     ></script>
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"
+      href="img/Foto.png"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/reset.css" />
