--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="profile">
           <img
             class="profile__foto"
-            src="https://avatars.githubusercontent.com/u/90266473?s=400&u=e1ac2f76e01bdbe5116e2833627c0403a7822c5d&v=4"
+            src="img/Foto.png"
             alt="foto"
           />
           <div>
